# tuxfootball

./: .autotools  .cproject  .gitignore  .project  .svnignore  AUTHORS  CMakeLists.txt  ChangeLog  IDEAS  Makefile.am  NEWS  README.cmake  README.release  autogen.sh  configure.ac  tuxfootball.appdata.xml  tuxfootball.cbp  tuxfootball.iss  tuxfootball.sln  tuxfootball.vcxproj
cmake/: FindSDL2_mixer.cmake
data/: CMakeLists.txt  Makefile.am
data/graphics/: Makefile.am  awayplayermarker.tga  create.sh  football.tga  footballshadow.tga  goal.blend  homeplayermarker.tga  player.blend  rotate.py  shadow.tga
data/graphics/.xvpics/: awayplayermarker.tga  football.tga  footballshadow.tga  goalpostbottom.tga  goalposttop.tga  homeplayermarker.tga  pitch.tga  pitch.xcf  pitchlines.xcf  shadow.tga  title.tga  title.xcf
debian/: .gitignore  changelog  control  copyright  files  tuxfootball.substvars
docs/: .gitignore
m4/: ChangeLog
po/: .gitignore  CMakeLists.txt  POTFILES.in  README  de.po  gd.po  it.po  tuxfootball.pot
src/: CMakeLists.txt  Font.hpp  Makefile.am  SFont-README  SFont.c  SFont.h  ball.cpp  ball.h  body.cpp  body.h  camera.cpp  camera.h  const.h  controller.cpp  controller.h  extratimehalftimestate.cpp  extratimehalftimestate.h  extratimesecondhalfstate.h  extratimestate.cpp  extratimestate.h  firsthalfstate.cpp  fontmanager.cpp  fontmanager.h  gameengine.cpp  gameengine.h  graphics.cpp  graphics.h  halftimestate.cpp  main.cpp  mainmenu.cpp  mainmenu.h  mainmenustate.cpp  matchabortedstate.cpp  matchfinishedstate.cpp  matchstartstate.h  matrix.cpp  matrix.h  menu.cpp  menu.h  menubutton.cpp  (+43 more)
src/gamestates/: extratimefirsthalfstate.cpp  extratimefirsthalfstate.h  extratimehalftimestate.cpp  extratimehalftimestate.h  extratimesecondhalfstate.cpp  extratimesecondhalfstate.h  extratimestate.cpp  extratimestate.h  firsthalfstate.cpp  firsthalfstate.h  fulltimestate.cpp  fulltimestate.h  halftimestate.cpp  halftimestate.h  ingamestatebase.cpp  ingamestatebase.h  mainmenustate.cpp  mainmenustate.h  matchabortedstate.cpp  matchabortedstate.h  matchfinishedstate.cpp  matchfinishedstate.h  matchstartstate.cpp  matchstartstate.h  menustatebase.cpp  menustatebase.h  nationalanthemstate.cpp  nationalanthemstate.h  penaltyshootoutstate.cpp  penaltyshootoutstate.h  redefinekeysstate.cpp  redefinekeysstate.h  secondhalfstate.cpp  secondhalfstate.h  statebase.cpp  statebase.h  videomenustate.cpp  videomenustate.h
src/logger/: logger.h
src/menu/: mainmenu.cpp  mainmenu.h  menu.cpp  menu.h  redefinekeysmenu.cpp  redefinekeysmenu.h  videosettingsmenu.cpp  videosettingsmenu.h
src/menu/elements/: menubutton.cpp  menubutton.h  menuitem.cpp  menuitem.h  menukeyselect.cpp  menukeyselect.h  menulabel.cpp  menulabel.h  menuoptionlist.cpp  menuoptionlist.h
src/resources/: fontmanager.cpp  fontmanager.h  resourcemanager.cpp  resourcemanager.h  soundmanager.cpp  soundmanager.h  surfacemanager.cpp  surfacemanager.h
tests/: point3dtest.cpp
