install(
	FILES
	graphics/awayplayermarker.png
	graphics/font_white.png
	graphics/font_yellow.png
	graphics/football.png
	graphics/footballshadow.png
	graphics/foul.png
	graphics/fulltime.png
	graphics/goal.png
	graphics/goalpostbottom.png
	graphics/goalposttop.png
	graphics/halftime.png
	graphics/homeplayermarker.png
	graphics/menu_background.png
	graphics/penalty.png
	graphics/pitchtile.png
	graphics/scratch.png
	graphics/tuxfootball.png
	graphics/score.png
	DESTINATION
	share/tuxfootball/graphics
)

install(
	FILES
	sound/beep.wav
	sound/bounce.wav
	sound/crowdboo.wav
	sound/crowdcheer.wav
	sound/crowdooh.wav
	sound/decrement_beep.wav
	sound/increment_beep.wav
	sound/ingame.ogg
	sound/kick.wav
	sound/refwhistleend.wav
	sound/refwhistlelong.wav
	sound/refwhistleshort.wav
	sound/refwhistletwice.wav
	sound/select_beep.wav
	sound/titlemusic.ogg
	DESTINATION
	share/tuxfootball/sound
)

add_subdirectory(graphics)
