
graphics_DATA = \
	graphics/24P_Arial_NeonYellow.png\
	graphics/24P_Copperplate_Blue.png \
	graphics/awayplayermarker.png \
	graphics/football.png \
	graphics/footballshadow.png \
	graphics/foul.png \
	graphics/fulltime.png \
	graphics/goal.png \
	graphics/goalpostbottom.tga \
	graphics/goalposttop.tga \
	graphics/halftime.png \
	graphics/homeplayermarker.png \
	graphics/menu_background.png \
	graphics/penalty.png \
	graphics/pitchtile.png \
	graphics/scratch.png \
	graphics/shadow.tga \
	graphics/tuxfootball.png

EXTRA_DIST = \
	$(graphics_DATA)\
	$(sound_DATA)

graphicsdir = \
	$(pkgdatadir)/graphics

sound_DATA = \
	sound/beep.wav\
	sound/bounce.wav \
	sound/crowdboo.wav \
	sound/crowdcheer.wav \
	sound/crowdooh.wav \
	sound/decrement_beep.wav \
	sound/increment_beep.wav \
	sound/ingame.ogg \
	sound/kick.wav \
	sound/refwhistleend.wav \
	sound/refwhistlelong.wav \
	sound/refwhistleshort.wav \
	sound/refwhistletwice.wav \
	sound/select_beep.wav \
	sound/titlemusic.ogg

sounddir = \
	$(pkgdatadir)/sound

SUBDIRS = \
	graphics

## File created by the gnome-build tools

