## Process this file with automake to produce Makefile.in

## Created by Anjuta

INCLUDES = \
	-DPACKAGE_LOCALE_DIR=\""$(prefix)/$(DATADIRNAME)/locale"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
	-DPACKAGE_DATA_DIR=\""$(datadir)"\" 

AM_CFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = tuxfootball

tuxfootball_SOURCES = \
	ball.cpp     \
	body.cpp     \
	camera.cpp     \
	controller.cpp     \
	extratimefirsthalfstate.cpp     \
	extratimehalftimestate.cpp     \
	extratimesecondhalfstate.cpp     \
	extratimestate.cpp     \
	firsthalfstate.cpp     \
	fulltimestate.cpp     \
	gameengine.cpp     \
	graphics.cpp     \
	halftimestate.cpp     \
	main.cpp     \
	mainmenu.cpp     \
	mainmenustate.cpp     \
	matchabortedstate.cpp     \
	matchfinishedstate.cpp     \
	matchstartstate.cpp     \
	matrix.cpp     \
	menu.cpp     \
	menubutton.cpp     \
	menuitem.cpp     \
	menukeyselect.cpp     \
	menulabel.cpp     \
	menuoptionlist.cpp     \
	nationalanthemstate.cpp     \
	penaltyshootoutstate.cpp     \
	pitch.cpp     \
	player.cpp     \
	point3d.cpp     \
	rect.cpp     \
	redefinekeysmenu.cpp     \
	redefinekeysstate.cpp     \
	secondhalfstate.cpp     \
	segment.cpp     \
	soundmanager.cpp     \
	spriteobject.cpp     \
	spritesequence.cpp     \
	statebase.cpp     \
	surfacemanager.cpp     \
	team.cpp     \
	tilemap.cpp     \
	videomenustate.cpp     \
	videosettingsmenu.cpp     \
	SFont.c

tuxfootball_LDFLAGS = \
	$(SDL_LIBS)

tuxfootball_CFLAGS = \
	$(SDL_CFLAGS)

tuxfootball_CXXFLAGS = \
	$(SDL_CFLAGS)

