## Process this file with automake to produce Makefile.in

## Created by Anjuta

INCLUDES = \
	-DPACKAGE_LOCALE_DIR=\""$(prefix)/$(DATADIRNAME)/locale"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
	-DPACKAGE_DATA_DIR=\""$(datadir)"\" 

AM_CFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = tuxfootball

tuxfootball_SOURCES = \
	ball.cpp     \
	body.cpp     \
	camera.cpp     \
	controller.cpp     \
	extratimefirsthalfstate.cpp     \
	extratimehalftimestate.cpp     \
	extratimesecondhalfstate.cpp     \
	extratimestate.cpp     \
	firsthalfstate.cpp     \
	fulltimestate.cpp     \
	gameengine.cpp     \
	graphics.cpp     \
	halftimestate.cpp     \
	main.cpp     \
	mainmenu.cpp     \
	mainmenustate.cpp     \
	matchabortedstate.cpp     \
	matchfinishedstate.cpp     \
	matchstartstate.cpp     \
	matrix.cpp     \
	menu.cpp     \
	menubutton.cpp     \
	menuitem.cpp     \
	menukeyselect.cpp     \
	menulabel.cpp     \
	menuoptionlist.cpp     \
	nationalanthemstate.cpp     \
	penaltyshootoutstate.cpp     \
	pitch.cpp     \
	player.cpp     \
	point3d.cpp     \
	rect.cpp     \
	redefinekeysmenu.cpp     \
	redefinekeysstate.cpp     \
	secondhalfstate.cpp     \
	segment.cpp     \
	soundmanager.cpp     \
	spriteobject.cpp     \
	spritesequence.cpp     \
	statebase.cpp     \
	surfacemanager.cpp     \
	team.cpp     \
	tilemap.cpp     \
	videomenustate.cpp     \
	videosettingsmenu.cpp     \
	SFont.c     \
	ball.h     \
	body.h     \
	camera.h     \
	const.h     \
	controller.h     \
	extratimefirsthalfstate.h     \
	extratimehalftimestate.h     \
	extratimesecondhalfstate.h     \
	extratimestate.h     \
	firsthalfstate.h     \
	fulltimestate.h     \
	gameengine.h     \
	graphics.h     \
	halftimestate.h     \
	mainmenu.h     \
	mainmenustate.h     \
	matchabortedstate.h     \
	matchfinishedstate.h     \
	matchstartstate.h     \
	matrix.h     \
	menu.h     \
	menubutton.h     \
	menuitem.h     \
	menukeyselect.h     \
	menulabel.h     \
	menuoptionlist.h     \
	nationalanthemstate.h     \
	penaltyshootoutstate.h     \
	pitch.h     \
	player.h     \
	point3d.h     \
	rect.h     \
	redefinekeysmenu.h     \
	redefinekeysstate.h     \
	secondhalfstate.h     \
	segment.h     \
	SFont.h     \
	soundmanager.h     \
	spriteobject.h     \
	spritesequence.h     \
	statebase.h     \
	surfacemanager.h     \
	team.h     \
	tilemap.h     \
	videomenustate.h     \
	videosettingsmenu.h     \
	resourcemanager.cpp     \
	resourcemanager.h

tuxfootball_LDFLAGS = \
	$(SDL_LIBS)

tuxfootball_CFLAGS =            \
	$(SDL_CFLAGS)

tuxfootball_CXXFLAGS =              \
	$(SDL_CFLAGS)

