## Process this file with automake to produce Makefile.in

## Created by Anjuta

INCLUDES = \
	-DPACKAGE_LOCALE_DIR=\""$(prefix)/$(DATADIRNAME)/locale"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
	-DPACKAGE_DATA_DIR=\""$(datadir)"\" 

AM_CFLAGS =\
	 -Wall\
	 -g

AM_CPPFLAGS = \
	 -Wall\
	 -g

bin_PROGRAMS = tuxfootball

tuxfootball_SOURCES = \
	gamestates/extratimefirsthalfstate.cpp \
	gamestates/extratimehalftimestate.cpp \
	gamestates/extratimesecondhalfstate.cpp \
	gamestates/extratimestate.cpp \
	gamestates/firsthalfstate.cpp \
	gamestates/fulltimestate.cpp \
	gamestates/halftimestate.cpp \
	gamestates/mainmenustate.cpp \
	gamestates/matchabortedstate.cpp \
	gamestates/matchfinishedstate.cpp \
	gamestates/matchstartstate.cpp \
	gamestates/nationalanthemstate.cpp \
	gamestates/penaltyshootoutstate.cpp \
	gamestates/redefinekeysstate.cpp \
	gamestates/secondhalfstate.cpp \
	gamestates/videomenustate.cpp \
	gamestates/statebase.cpp \
	gamestates/extratimefirsthalfstate.h \
	gamestates/extratimehalftimestate.h \
	gamestates/extratimesecondhalfstate.h \
	gamestates/extratimestate.h \
	gamestates/firsthalfstate.h \
	gamestates/fulltimestate.h \
	gamestates/halftimestate.h \
	gamestates/mainmenustate.h \
	gamestates/matchabortedstate.h \
	gamestates/matchfinishedstate.h \
	gamestates/matchstartstate.h \
	gamestates/nationalanthemstate.h \
	gamestates/penaltyshootoutstate.h \
	gamestates/redefinekeysstate.h \
	gamestates/secondhalfstate.h \
	gamestates/statebase.h \
	gamestates/videomenustate.h \
	ball.cpp \
	body.cpp \
	camera.cpp \
	controller.cpp \
	fontmanager.cpp \
	gameengine.cpp \
	graphics.cpp \
	main.cpp \
	mainmenu.cpp \
	matrix.cpp \
	menu.cpp \
	menubutton.cpp \
	menuitem.cpp \
	menukeyselect.cpp \
	menulabel.cpp \
	menuoptionlist.cpp \
	pitch.cpp \
	player.cpp \
	point3d.cpp \
	rect.cpp \
	redefinekeysmenu.cpp \
	segment.cpp \
	soundmanager.cpp \
	spriteobject.cpp \
	spritesequence.cpp \
	surfacemanager.cpp \
	team.cpp \
	tilemap.cpp \
	videosettingsmenu.cpp \
	SFont.c \
	ball.h \
	body.h \
	camera.h \
	const.h \
	controller.h \
	Font.hpp \
	fontmanager.h \
	gameengine.h \
	graphics.h \
	mainmenu.h \
	matrix.h \
	menu.h \
	menubutton.h \
	menuitem.h \
	menukeyselect.h \
	menulabel.h \
	menuoptionlist.h \
	pitch.h \
	player.h \
	point3d.h \
	rect.h \
	redefinekeysmenu.h \
	segment.h \
	SFont.h \
	soundmanager.h \
	spriteobject.h \
	spritesequence.h \
	surfacemanager.h \
	team.h \
	tilemap.h \
	videosettingsmenu.h \
	resourcemanager.cpp \
	resourcemanager.h

tuxfootball_LDFLAGS = \
	$(SDL_LIBS)

tuxfootball_CFLAGS =    \
	$(SDL_CFLAGS)

tuxfootball_CXXFLAGS =      \
	$(SDL_CFLAGS)

